--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /* border: 1px solid red; */
+    font-family: "Montserrat";
+    
+}
+
